--- a/lezione 1/index.html
+++ b/lezione 1/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezione 2</title>
+    <title>Lezione 1 js</title>
 </head>
 <body>
     
 </body>
-<script src="./lezione_02_istruzioni_condizionali.js"></script>
+<script src="./lezione_01.js"></script>
+
 </html>
