--- a/lezione 2/lezione2.html
+++ b/lezione 2/lezione2.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezione 1 js</title>
+    <title>Lezione 2</title>
 </head>
 <body>
     
 </body>
-<script src="./lezione_01.js"></script>
+
 <script src="./lezione_02.js"></script>
+<script src="./lezione_02_istruzioni_condizionali.js"></script>
+<script src="./lezione_02_istruzioni_iterative.js"></script>
 </html>
