--- a/lezione 1/lezione_1.html
+++ b/lezione 1/lezione_1.html
@@ -7,7 +7,7 @@
     <title>Lezione 1 js</title>
 </head>
 <body>
-    
+    <button type="button" onclick="alert('Ciao mondo!')">Clicca qui</button>
 </body>
 <script src="./lezione_01.js"></script>
 
