--- a/lezione 2/lezione2.html
+++ b/lezione 2/lezione2.html
@@ -10,7 +10,7 @@
     
 </body>
 
-<script src="./lezione_02.js"></script>
+<script src="./lezione_02_casting.js"></script>
 <script src="./lezione_02_istruzioni_condizionali.js"></script>
 <script src="./lezione_02_istruzioni_iterative.js"></script>
 </html>
