--- a/lezione 1/lezione_1.html
+++ b/lezione 1/lezione_1.html
@@ -9,6 +9,6 @@
 <body>
     <button type="button" onclick="alert('Ciao mondo!')">Clicca qui</button>
 </body>
-<script src="./lezione_01.js"></script>
+<script src="./esempio_oggetti.js"></script>
 
 </html>
