--- a/lezione 3/lezione_3.html
+++ b/lezione 3/lezione_3.html
@@ -9,7 +9,6 @@
 <body>
     
 </body>
-<script src="./lezione_3_funzioni.js"></script>
-<script src="./lezione_3_scope.js"></script>
-<script src="./lezione_3_esercizi.js"></script>
+<script src="./funzioni.js"></script>
+<script src="./scope.js"></script>
 </html>
