--- a/lezione 4/lezione_4.html
+++ b/lezione 4/lezione_4.html
@@ -9,7 +9,5 @@
 <body>
     
 </body>
-<script src="./lezione_4_oggetti.js"></script>
-<script src="./lezione_4_esercizi.js"></script>
-<script src="./lezione_4_garage.js"></script>
+<script src="./oggetti.js"></script>
 </html>
