--- a/lezione 5/lezione_5.html
+++ b/lezione 5/lezione_5.html
@@ -9,6 +9,6 @@
 <body>
     
 </body>
-<script src="./lezione_5_costruttore.js"></script>
-<script src="./lezione_5_classi.js"></script>
+<script src="./costruttore.js"></script>
+<script src="./classe_calcolatrice.js"></script>
 </html>
