--- a/lezione 6/lezione_06.html
+++ b/lezione 6/lezione_06.html
@@ -9,7 +9,7 @@
 <body>
     
 </body>
-<script src="./ereditarieta.js"></script>
+<script src="./classi_geometriche.js"></script>
 <script src="./funzione_annidata.js"></script>
-<script src="./esercizio_rubrica.js"></script>
+<script src="./rubrica.js"></script>
 </html>
