--- a/DOM/calcolatrice.html
+++ b/DOM/calcolatrice.html
@@ -14,7 +14,7 @@
             <h1>Calcolatrice Basic</h1>
         </div>
         <div class="row">
-            <h2 id="risultato"></h2>
+            <h2 id="risultato">Risultato</h2>
         </div>
         <div class="row">
             <div class="col-6">
@@ -24,22 +24,24 @@
                 <input id="operatore2" type="text" value="0"></input>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
+        <div class="row m-5 p-2">
+            <div class="col-6 d-grid gap-2">
                 <button class="btn-primary" onclick="calcolaOperazione('+')">+</button>
             </div>
-            <div class="col-6">
+            <div class="col-6 d-grid gap-2">
                 <button class="btn-primary" onclick="calcolaOperazione('-')">-</button>
             </div>
-            <div class="col-6">
+        </div>
+            <div class="row m-5 p-2">
+            <div class="col-6 d-grid gap-2">
                 <button class="btn-primary" onclick="calcolaOperazione('/')">/</button>
             </div>
-            <div class="col-6">
+            <div class="col-6 d-grid gap-2">
                 <button class="btn-primary" onclick="calcolaOperazione('*')">*</button>
             </div>
         </div>
     </div>
     
 </body>
-<script src="./calcolatrice.js"></script>
+<script src="calcolatrice.js"></script>
 </html>
